@@ -1,6 +1,11 @@
 = Changelog
 
 
+== master
+
+* FIXED: #javascript_content_for doesn't properly concat output when called with block (closes #183).
+
+
 == Release 0.3.0
 
 * ADDED: Added #javascript_content_for helper. #javascript_content_for combines the features of #content_for and #javascript_tag (closes #149).
